# SDL_Test

./: .clang-format  .gitignore  CMakeLists.txt  Map.cpp  TextureManager.hpp  game.cpp  game.hpp  main.cpp
.github/workflows/: lint.yml
assets/: CMakeLists.txt  map.csv  map16x16.map
assets/Tiled_WorkFiles/: map.tmx  tileset.tsx  tileset.xcf
src/: CMakeLists.txt  Collision.cpp  Collision.h  Collision.hpp  Components.h  ECS.h  GameTileEntity.hpp  Map.cpp  Map.h  Map.hpp  RpgGame.cpp  RpgGame.hpp  TextureManager.cpp  TextureManager.hpp  Utilities.cpp  Utilities.hpp  Vector2D.cpp  Vector2D.h  game.cpp  game.hpp  gameObject.cpp  gameObject.hpp  main.cpp  mainPlayer.hpp  player.cpp  player.hpp
src/ECS/: AnimationComponent.cpp  AnimationComponent.hpp  CMakeLists.txt  ColliderComponent.h  ColliderComponent.hpp  Component.hpp  Components.h  Components.hpp  ECS.cpp  ECS.h  ECS.hpp  Entity.cpp  Entity.hpp  KeyboardController.cpp  KeyboardController.h  KeyboardController.hpp  Manager.cpp  Manager.hpp  PositionComponent.h  SpriteComponent.cpp  SpriteComponent.h  SpriteComponent.hpp  TextureManager.cpp  TextureManager.hpp  TileComponent.cpp  TileComponent.hpp  TransformComponent.cpp  TransformComponent.h  TransformComponent.hpp  Vector2D.cpp  Vector2D.hpp
src/ECS/Collision/: ColliderComponent.hpp  Collision.cpp  Collision.hpp
src/ECS/Core/: Entity.cpp  Entity.hpp  Manager.cpp  Manager.hpp
src/ECS/Drawing/: AnimationComponent.cpp  AnimationComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TextureManager.cpp  TileComponent.cpp  TileComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
src/ECS/Game/: game.cpp  game.hpp
src/ECS/Inputs/: KeyboardController.cpp  KeyboardController.hpp
src/ECS/Mapping/: MapTiledCSV.cpp  MapTiledCSV.hpp
tests/: CMakeLists.txt  DigitTester.cpp  DigitTesterBase10.cpp
